cleanup - fix code - add final to SpotifyApi - replace return